--- a/index.html
+++ b/index.html
@@ -998,20 +998,42 @@
             updateStats();
         }
 
+        // Compare version strings like "V1.2.3" numerically
+        function compareVersions(a, b) {
+            const parseVersion = (v) => {
+                const stripped = v.replace(/^v\.?/i, '');
+                return stripped.split('.').map(n => parseInt(n, 10) || 0);
+            };
+
+            const aParts = parseVersion(a);
+            const bParts = parseVersion(b);
+            const maxLen = Math.max(aParts.length, bParts.length);
+
+            for (let i = 0; i < maxLen; i++) {
+                const aNum = aParts[i] || 0;
+                const bNum = bParts[i] || 0;
+                if (aNum !== bNum) return aNum - bNum;
+            }
+            return 0;
+        }
+
         // Sort data
         function sortData() {
             filteredData.sort((a, b) => {
                 let aVal = a[currentSort.column];
                 let bVal = b[currentSort.column];
+                let comparison = 0;
 
-                if (currentSort.column === 'level') {
-                    aVal = parseInt(aVal);
-                    bVal = parseInt(bVal);
+                if (currentSort.column === 'id') {
+                    comparison = compareVersions(aVal, bVal);
+                } else if (currentSort.column === 'level') {
+                    comparison = parseInt(aVal) - parseInt(bVal);
+                } else {
+                    if (aVal < bVal) comparison = -1;
+                    else if (aVal > bVal) comparison = 1;
                 }
 
-                if (aVal < bVal) return currentSort.direction === 'asc' ? -1 : 1;
-                if (aVal > bVal) return currentSort.direction === 'asc' ? 1 : -1;
-                return 0;
+                return currentSort.direction === 'asc' ? comparison : -comparison;
             });
         }
 
